tests/invariants/pass/type_constraints_env.act
contract AllEnvVars

constructor
interface constructor()

creates
	uint value := CALLVALUE

invariants
	value >= 0
